# BRiCk

./: coq-cpp2v-bin.opam  coq-cpp2v.opam  dune-project
.github/workflows/: main.yml
theories/lang/cpp/logic/: iprop_own.v
